# BookMatch

./: .gitignore  CMakeLists.txt  README.md
Scraper/: BookScraper.py  isbns.txt
Scrapper/: book_scrapper.py  isbns.txt
src/: Main.cpp  book.h  data.cpp  data.h  main.cpp  user.cpp  user.h
src/Book/: Book.cpp  Book.h  book.cpp  book.h
src/Data/: data.cpp  data.h  data_manager.cpp  data_manager.h
src/DataManager/: DataManager.cpp  DataManager.h
src/History/: History.cpp  History.h
src/User/: User.cpp  User.h  user.cpp  user.h
src/Utils/: FormatAux.cpp  FormatAux.h
